"plantuml.exportOutDir": "."
@startuml 
title Zeldiablo


class Jeu {

}

class Labyrinthe {

}

abstract Case {

}

class CaseVide {

}

class Mur {

}

abstract Entite {

}

class Aventurier {

}

Jeu "1" --> "1" Labyrinthe : -labyrinthe
Labyrinthe "1" --> "0..*" Case : -cases
Jeu "1" --> "0..*" Aventurier : -aventurier
Labyrinthe "1" --> "1" Aventurier : -aventurier

CaseVide --|> Case
Mur --|> Case
Aventurier --|> Entite

@enduml